--- a/app/src/main/res/layout/activity_products.xml
+++ b/app/src/main/res/layout/activity_products.xml
@@ -42,7 +42,9 @@
         android:layout_height="wrap_content"
         android:queryHint="Search for your coffee..."
         android:iconifiedByDefault="false"
+        android:queryBackground="@null"
         android:layout_marginTop="27dp"
+        android:theme="@style/SearchViewStyle"
         android:layout_marginHorizontal="20dp"
         android:background="@drawable/searchview_background"
         android:backgroundTint="@color/grey_opacity60_primary"/>
@@ -50,17 +52,19 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:scrollbars="none"
+        android:layout_marginTop="12dp"
         android:layout_below="@id/searchView"
         android:layout_alignParentBottom="true">
 
         <RelativeLayout
             android:id="@+id/sliderHome"
             android:layout_width="match_parent"
-            android:layout_height="139dp">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/tvNull"
-                android:layout_marginTop="17dp"
+                android:layout_marginTop="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
