--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -16,6 +16,7 @@
     <ScrollView
         android:clipToPadding="false"
         android:paddingTop="15dp"
+        android:scrollbars="none"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/toolbarHome"
@@ -24,7 +25,7 @@
         <RelativeLayout
             android:id="@+id/sliderHome"
             android:layout_width="match_parent"
-            android:layout_height="139dp">
+            android:layout_height="wrap_content">
 
         <androidx.viewpager2.widget.ViewPager2
             android:id="@+id/viewpager_ImageSlider"
@@ -64,7 +65,7 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="13dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tvBestSellers"
