--- a/app/src/main/res/layout/item_rv_bestsaller.xml
+++ b/app/src/main/res/layout/item_rv_bestsaller.xml
@@ -52,7 +52,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="15dp"
                 android:fontFamily="@font/raleway_regular"
-                android:text="@string/item_name"
+                android:text="ddddddddddddddddd"
+                android:maxLength="10"
+                android:ellipsize="marquee"
                 android:textColor="@color/text_color"
                 android:textSize="16sp"
                 android:layout_marginTop="25dp"
