--- a/app/src/main/res/layout/item_rv_product.xml
+++ b/app/src/main/res/layout/item_rv_product.xml
@@ -4,13 +4,13 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginHorizontal="12dp"
-    android:layout_marginTop="24dp">
+    android:layout_marginHorizontal="12dp">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/item_card"
+        android:layout_marginTop="24dp"
         android:layout_width="148dp"
-        android:layout_height="223dp"
+        android:layout_height="wrap_content"
         android:elevation="20dp"
         app:cardBackgroundColor="@color/grey_opacity60_primary"
         app:cardCornerRadius="9dp"
@@ -26,21 +26,32 @@
             android:padding="14dp">
 
 
-            <ImageView
-                android:id="@+id/item_img_product"
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/img_card"
                 android:layout_width="120dp"
                 android:layout_height="102dp"
-                android:background="@drawable/item_image_custom_bg"
-                android:src="@drawable/e"
+                app:cardCornerRadius="9dp"
+                android:background="@null"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent">
+                <ImageView
+                    android:id="@+id/item_img_product"
+                    android:layout_width="120dp"
+                    android:layout_height="102dp"
+                    android:background="@drawable/item_image_custom_bg"
+                    android:src="@drawable/e"
+                    android:scaleType="centerCrop"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </com.google.android.material.card.MaterialCardView>
 
             <TextView
                 android:id="@+id/tv_name_product"
                 android:layout_width="101dp"
-                android:layout_height="41dp"
-                android:maxLines="2"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
                 android:ellipsize="end"
                 android:layout_marginTop="9dp"
                 android:layout_marginEnd="10dp"
@@ -50,17 +61,17 @@
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/item_img_product" />
+                app:layout_constraintTop_toBottomOf="@+id/img_card" />
 
             <ImageView
                 android:id="@+id/imageView_product"
                 android:layout_width="15dp"
                 android:layout_height="15dp"
-                android:layout_marginTop="9dp"
+                android:layout_marginTop="12dp"
                 android:src="@drawable/ic_favorite"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/tv_name_product"
-                app:layout_constraintTop_toBottomOf="@+id/item_img_product" />
+                app:layout_constraintTop_toBottomOf="@+id/img_card" />
 
             <TextView
                 android:id="@+id/tv_categories_product"
@@ -82,15 +93,26 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="9dp"
                 android:maxLines="1"
-                android:ellipsize="end"
+                android:textStyle="bold"
+                android:ellipsize="marquee"
                 android:fontFamily="@font/montserrat_regular"
-                android:text="@string/item_price"
+                android:text="99999999999999999999"
                 android:textColor="@color/grey_primary_variant"
                 android:textSize="11sp"
+                android:maxLength="13"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_categories_product" />
 
-
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/raleway_medium"
+                android:text=" VNĐ"
+                android:textColor="@color/grey_primary_variant"
+                android:textSize="11sp"
+                app:layout_constraintStart_toEndOf="@+id/item_price_product"
+                app:layout_constraintTop_toBottomOf="@+id/tv_categories_product" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
