--- a/app/src/main/res/layout/item_slide_home.xml
+++ b/app/src/main/res/layout/item_slide_home.xml
@@ -6,6 +6,9 @@
     android:id="@+id/imageSlide"
     android:scaleType="centerCrop"
     android:adjustViewBounds="true"
-    app:riv_corner_radius="12dp">
+    app:riv_corner_radius_bottom_left="16dp"
+    app:riv_corner_radius_bottom_right="16dp"
+    app:riv_corner_radius_top_left="16dp"
+    app:riv_corner_radius_top_right="16dp">
 
 </com.makeramen.roundedimageview.RoundedImageView>
