--- a/app/src/main/res/layout/item_rv_bestsaller.xml
+++ b/app/src/main/res/layout/item_rv_bestsaller.xml
@@ -53,7 +53,7 @@
                 android:layout_marginStart="15dp"
                 android:fontFamily="@font/raleway_regular"
                 android:text="ddddddddddddddddd"
-                android:maxLength="10"
+                android:maxLength="8"
                 android:ellipsize="marquee"
                 android:textColor="@color/text_color"
                 android:textSize="16sp"
@@ -125,17 +125,17 @@
                 app:layout_constraintTop_toTopOf="@+id/img_card"
                 app:cardCornerRadius="15dp"
                 android:layout_width="85dp"
-                android:layout_height="41dp">
+                android:layout_height="wrap_content">
 
                 <RelativeLayout
                     android:background="@color/grey_primary_variant"
-                    android:padding="12dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:padding="10dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
 
                     <ImageView
                         android:layout_width="24dp"
-                        android:layout_height="48dp"
+                        android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:src="@drawable/ic_cart" />
 
