--- a/app/src/main/res/layout/item_rv_bestsaller.xml
+++ b/app/src/main/res/layout/item_rv_bestsaller.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -46,76 +47,135 @@
 
             </com.google.android.material.card.MaterialCardView>
 
-            <TextView
-                android:id="@+id/item_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:fontFamily="@font/raleway_regular"
-                android:text="ddddddddddddddddd"
-                android:maxLength="8"
-                android:ellipsize="marquee"
-                android:textColor="@color/text_color"
-                android:textSize="16sp"
-                android:layout_marginTop="25dp"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginHorizontal="8dp"
+                android:layout_marginVertical="15dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/btn_add_card"
                 app:layout_constraintStart_toEndOf="@+id/img_card"
                 app:layout_constraintTop_toTopOf="parent">
-            </TextView>
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/raleway_variable_font_wght"
-                android:text="@string/dot_center_vertical"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                android:textColor="@color/text_color"
-                android:layout_marginStart="3dp"
-                app:layout_constraintBottom_toBottomOf="@+id/item_name"
-                app:layout_constraintStart_toEndOf="@+id/item_name"
-                app:layout_constraintTop_toTopOf="@+id/item_name">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/item_name_fav_section"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
 
-            </TextView>
+                    <TextView
+                        android:id="@+id/item_name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="end"
+                        android:fontFamily="@font/raleway_regular"
+                        android:maxLines="1"
+                        android:text="@string/item_name"
+                        android:textColor="@color/text_color"
+                        android:textSize="16sp"
+                        app:layout_constrainedWidth="true"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/textView"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintHorizontal_chainStyle="packed"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/item_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/item_price"
-                android:textColor="@color/text_color"
-                android:textSize="11sp"
-                android:fontFamily="@font/montserrat_regular"
-                app:layout_constraintStart_toEndOf="@+id/img_card"
-                app:layout_constraintTop_toBottomOf="@+id/item_name"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="7dp">
-            </TextView>
+                    </TextView>
 
-            <TextView
-                android:id="@+id/item_bestsaller"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat_regular"
-                android:paddingBottom="0dp"
-                android:textColor="@color/text_color"
-                android:textSize="16sp"
-                android:layout_marginStart="3dp"
-                app:layout_constraintBottom_toBottomOf="@+id/textView"
-                app:layout_constraintStart_toEndOf="@+id/textView"
-                app:layout_constraintTop_toTopOf="@+id/textView" />
+                    <TextView
+                        android:id="@+id/textView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="3dp"
+                        android:fontFamily="@font/raleway_variable_font_wght"
+                        android:text="@string/dot_center_vertical"
+                        android:textColor="@color/text_color"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toBottomOf="@+id/item_name"
+                        app:layout_constraintEnd_toStartOf="@+id/item_favorite"
+                        app:layout_constraintStart_toEndOf="@+id/item_name"
+                        app:layout_constraintTop_toTopOf="@+id/item_name">
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
-                android:layout_marginStart="3dp"
-                android:src="@drawable/ic_favorite"
-                app:layout_constraintBottom_toBottomOf="@+id/item_bestsaller"
-                app:layout_constraintStart_toEndOf="@+id/item_bestsaller"
-                app:layout_constraintTop_toTopOf="@+id/item_bestsaller">
+                    </TextView>
 
-            </ImageView>
+                    <TextView
+                        android:id="@+id/item_favorite"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="3dp"
+                        android:ellipsize="end"
+                        android:fontFamily="@font/montserrat_regular"
+                        android:maxLines="1"
+                        android:paddingBottom="0dp"
+                        android:text="@string/item_favorite"
+                        android:textColor="@color/text_color"
+                        android:textSize="16sp"
+                        app:layout_constrainedWidth="true"
+                        app:layout_constraintBottom_toBottomOf="@+id/textView"
+                        app:layout_constraintEnd_toStartOf="@+id/imageView"
+                        app:layout_constraintHorizontal_chainStyle="packed"
+                        app:layout_constraintStart_toEndOf="@+id/textView"
+                        app:layout_constraintTop_toTopOf="@+id/textView" />
+
+                    <ImageView
+                        android:id="@+id/imageView"
+                        android:layout_width="15dp"
+                        android:layout_height="15dp"
+                        android:layout_marginStart="3dp"
+                        android:src="@drawable/ic_favorite"
+                        app:layout_constraintBottom_toBottomOf="@+id/item_favorite"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintHorizontal_bias="0.0"
+                        app:layout_constraintStart_toEndOf="@+id/item_favorite"
+                        app:layout_constraintTop_toTopOf="@+id/item_favorite">
+
+                    </ImageView>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <TextView
+                    android:id="@+id/item_price"
+                    android:layout_width="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat_regular"
+                    android:text="@string/item_price"
+                    android:textColor="@color/text_color"
+                    android:textSize="11sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/item_categories">
+                </TextView>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:fontFamily="@font/raleway_regular"
+                    android:text=" VNĐ"
+                    android:textColor="@color/text_color"
+                    android:textSize="11sp"
+                    app:layout_constraintStart_toEndOf="@+id/item_price"
+                    app:layout_constraintTop_toBottomOf="@+id/item_categories" />
+
+                <TextView
+                    android:id="@+id/item_categories"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/raleway_regular"
+                    android:text="@string/item_price"
+                    android:textColor="@color/text_color"
+                    android:textSize="11sp"
+                    android:layout_marginTop="5dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/item_name_fav_section">
+
+                </TextView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/btn_add_card"
@@ -124,7 +184,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/img_card"
                 app:cardCornerRadius="15dp"
-                android:layout_width="85dp"
+                android:layout_width="80dp"
                 android:layout_height="wrap_content">
 
                 <RelativeLayout
@@ -134,7 +194,7 @@
                     android:layout_height="wrap_content">
 
                     <ImageView
-                        android:layout_width="24dp"
+                        android:layout_width="20dp"
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:src="@drawable/ic_cart" />
@@ -144,9 +204,10 @@
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
                         android:layout_centerVertical="true"
+                        android:fontFamily="@font/raleway_medium"
                         android:text="Add"
                         android:textColor="@color/white"
-                        android:textSize="16sp" />
+                        android:textSize="14sp" />
 
                 </RelativeLayout>
 
