--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -102,7 +102,8 @@
                         android:layout_height="wrap_content"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         tools:itemCount="3"
-                        tools:listitem="@layout/item_cart" />
+                        tools:listitem="@layout/item_cart"
+                        android:nestedScrollingEnabled="false"/>
 
                 </LinearLayout>
 
@@ -136,7 +137,8 @@
                         android:layout_height="wrap_content"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         tools:itemCount="2"
-                        tools:listitem="@layout/item_cart" />
+                        tools:listitem="@layout/item_cart"
+                        android:nestedScrollingEnabled="false"/>
 
                 </LinearLayout>
 
@@ -168,7 +170,8 @@
                         android:layout_height="wrap_content"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         tools:itemCount="2"
-                        tools:listitem="@layout/item_cart" />
+                        tools:listitem="@layout/item_cart"
+                        android:nestedScrollingEnabled="false"/>
 
                 </LinearLayout>
 
@@ -200,7 +203,8 @@
                         android:layout_height="wrap_content"
                         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                         tools:itemCount="2"
-                        tools:listitem="@layout/item_cart" />
+                        tools:listitem="@layout/item_cart"
+                        android:nestedScrollingEnabled="false"/>
 
                 </LinearLayout>
 
