--- a/app/src/main/res/layout/order_history_item_layout.xml
+++ b/app/src/main/res/layout/order_history_item_layout.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="18dp"
+    android:layout_marginTop="18dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.card.MaterialCardView
@@ -89,9 +89,13 @@
                     android:id="@+id/rv_order_item"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:clipToPadding="false"
+                    android:paddingBottom="10dp"
                     app:layout_constraintEnd_toEndOf="@id/order_item_body"
                     app:layout_constraintStart_toStartOf="@id/order_item_body"
-                    app:layout_constraintTop_toTopOf="@id/order_item_body">
+                    app:layout_constraintTop_toTopOf="@id/order_item_body"
+                    tools:itemCount="2"
+                    tools:listitem="@layout/order_item_in_bill_layout">
 
                 </androidx.recyclerview.widget.RecyclerView>
 
@@ -178,6 +182,7 @@
                     android:textAlignment="textEnd"
                     android:textColor="@color/grey_secondary"
                     android:textSize="14sp"
+                    android:layout_marginStart="8dp"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_subtotal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/tv_subtotal"
@@ -210,6 +215,7 @@
                     android:textAlignment="textEnd"
                     android:textColor="@color/grey_secondary"
                     android:textSize="14sp"
+                    android:layout_marginStart="8dp"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_shipping"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/tv_shipping"
@@ -241,6 +247,7 @@
                     android:textAlignment="textEnd"
                     android:textColor="@color/title_text_color"
                     android:textSize="14sp"
+                    android:layout_marginStart="8dp"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_total"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/tv_total"
