--- a/app/src/main/res/layout/order_item_in_bill_layout.xml
+++ b/app/src/main/res/layout/order_item_in_bill_layout.xml
@@ -14,7 +14,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp">
+        android:layout_marginTop="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
