--- a/app/src/main/res/layout/activity_order_history.xml
+++ b/app/src/main/res/layout/activity_order_history.xml
@@ -35,6 +35,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:clipToPadding="false"
+        android:paddingBottom="20dp"
         tools:itemCount="3"
         tools:listitem="@layout/order_history_item_layout"
         app:layout_constraintTop_toBottomOf="@+id/toolbar_order_history_activity">
