--- a/app/src/main/res/layout/order_item_in_bill_layout.xml
+++ b/app/src/main/res/layout/order_item_in_bill_layout.xml
@@ -14,7 +14,10 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:background="@color/grey_opacity60_primary"
+        android:backgroundTint="#4B413A"
+        android:elevation="0dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -98,6 +101,7 @@
                 android:gravity="center_vertical"
                 android:text="90.000 VND"
                 android:textColor="@color/text_color"
+                android:textAlignment="textEnd"
                 android:textSize="11sp">
 
             </TextView>
