--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:paddingHorizontal="20dp"
     android:paddingTop="20dp"
-    tools:context=".ui.activities.notifications.Notification">
+    tools:context=".ui.activities.notifications.NotificationActivity">
 
     <RelativeLayout
         android:id="@+id/appbar"
