--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -61,6 +61,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_below="@id/tvCategories"
                 android:id="@+id/recyclerView"
+                android:layout_centerHorizontal="true"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
