--- a/app/src/main/res/layout/activity_checkout.xml
+++ b/app/src/main/res/layout/activity_checkout.xml
@@ -271,6 +271,23 @@
 
             </androidx.cardview.widget.CardView>
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="100dp"
+                android:layout_height="80dp"
+                app:layout_constraintStart_toEndOf="@id/btn_credit_card"
+                app:layout_constraintTop_toBottomOf="@id/tv_payment_label"
+                app:cardCornerRadius="9dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginStart="24dp"
+                android:backgroundTint="#AD006C">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/momo" />
+
+            </androidx.cardview.widget.CardView>
+
             <TextView
                 android:id="@+id/tv_jolie_coin"
                 android:layout_width="wrap_content"
