--- a/app/src/main/res/layout/activity_order_detail.xml
+++ b/app/src/main/res/layout/activity_order_detail.xml
@@ -62,6 +62,7 @@
                     android:layout_height="260dp"
                     android:name="com.google.android.gms.maps.SupportMapFragment"
                     android:id="@+id/map"
+                    android:nestedScrollingEnabled="true"
                     app:uiRotateGestures="true" />
             </androidx.cardview.widget.CardView>
 
