--- a/app/src/main/res/layout/order_history_item_layout.xml
+++ b/app/src/main/res/layout/order_history_item_layout.xml
@@ -79,7 +79,7 @@
                 android:id="@+id/order_item_body"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="visible"
+                android:animateLayoutChanges="true"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
