--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -25,8 +25,9 @@
         android:layout_below="@id/tvAppName"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="90dp"
-        android:fontFamily="@font/raleway_variable_font_wght"
+        android:fontFamily="@font/raleway_medium"
         android:text="FORGOT YOUR PASSWORD?"
+        android:textAlignment="center"
         android:textColor="#bc834b"
         android:textSize="24sp"
         android:textStyle="bold" />
@@ -38,7 +39,7 @@
         android:layout_below="@id/tvForgotPassword"
         android:layout_marginTop="32dp"
         android:width="289dp"
-        android:fontFamily="@font/raleway_variable_font_wght"
+        android:fontFamily="@font/raleway_regular"
         android:text="@string/intro_forgot_password"
         android:textAlignment="center"
         android:textColor="#e4e4e4"
@@ -52,7 +53,7 @@
         android:layout_height="wrap_content"
         android:text="@string/username"
         android:textColor="#e4e4e4"
-        android:fontFamily="@font/raleway_variable_font_wght"
+        android:fontFamily="@font/raleway_regular"
         android:layout_marginTop="32dp"
         android:layout_below="@id/tvIntro"
         android:textSize="16sp" />
@@ -91,7 +92,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
-            android:fontFamily="@font/raleway_variable_font_wght"
+            android:fontFamily="@font/raleway_regular"
             android:text="CANCEL"
             android:textColor="#E7A15C"
             android:textSize="16sp" />
@@ -103,7 +104,7 @@
             android:width="104dp"
             android:height="40dp"
             android:background="@drawable/rounded_shape"
-            android:fontFamily="@font/raleway_variable_font_wght"
+            android:fontFamily="@font/raleway_regular"
             android:text="CONFIRM"
             android:textColor="#ffffff"
             android:textSize="16sp" />
