--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -47,8 +47,8 @@
     </style>
 
     <style name="MyCustomTabTextAppearance" parent="TextAppearance.Design.Tab">
-        <item name="fontFamily">@font/raleway_variable_font_wght</item>
-        <item name="android:fontFamily">@font/raleway_variable_font_wght</item>
+        <item name="fontFamily">@font/raleway_regular</item>
+        <item name="android:fontFamily">@font/raleway_regular</item>
         <item name="textAllCaps">false</item>
         <item name="android:textSize">18sp</item>
     </style>
@@ -136,5 +136,9 @@
         <item name="android:textColorHint">@color/white</item>
         <item name="fontFamily">@font/raleway_regular</item>
         <item name="android:fontFamily">@font/raleway_regular</item>
+    </style>
+
+    <style name="SplashScreen" parent="Theme.JolieCafe">
+        <item name="android:windowBackground">@drawable/splashbackground</item>
     </style>
 </resources>
