--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -33,9 +33,9 @@
             android:layout_height="150dp"/>
 
         <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
-            android:paddingTop="10dp"
             android:layout_below="@id/viewpager_ImageSlider"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
             android:id="@+id/dots_indicator"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
