--- a/app/src/main/res/layout/item_slide_home.xml
+++ b/app/src/main/res/layout/item_slide_home.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/imageSlide"
+    android:layout_marginVertical="10dp"
     android:scaleType="centerCrop"
     android:adjustViewBounds="true"
     app:riv_corner_radius_bottom_left="16dp"
