--- a/app/src/main/res/layout/order_history_item_layout.xml
+++ b/app/src/main/res/layout/order_history_item_layout.xml
@@ -20,6 +20,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:animateLayoutChanges="true"
             android:background="@drawable/profile_button_custom_bg"
             android:padding="18dp">
 
@@ -68,7 +69,8 @@
                 android:id="@+id/btn_collapse"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_chevron_up"
+                android:src="@drawable/ic_chevron_down"
+                android:padding="15dp"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_order_date"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tv_order_date">
@@ -79,7 +81,7 @@
                 android:id="@+id/order_item_body"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:animateLayoutChanges="true"
+                android:visibility="gone"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -87,7 +89,7 @@
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_order_item"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:clipToPadding="false"
                     android:paddingBottom="10dp"
@@ -177,12 +179,12 @@
                     android:id="@+id/tv_subtotal_cost"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
                     android:fontFamily="@font/montserrat_regular"
                     android:text="180.000 VND"
                     android:textAlignment="textEnd"
                     android:textColor="@color/grey_secondary"
                     android:textSize="14sp"
-                    android:layout_marginStart="8dp"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_subtotal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/tv_subtotal"
@@ -210,12 +212,12 @@
                     android:id="@+id/tv_shipping_fee"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
                     android:fontFamily="@font/montserrat_regular"
                     android:text="0 VND"
                     android:textAlignment="textEnd"
                     android:textColor="@color/grey_secondary"
                     android:textSize="14sp"
-                    android:layout_marginStart="8dp"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_shipping"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/tv_shipping"
@@ -242,12 +244,12 @@
                     android:id="@+id/tv_total_cost"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
                     android:fontFamily="@font/montserrat_regular"
                     android:text="180.000 VND"
                     android:textAlignment="textEnd"
                     android:textColor="@color/title_text_color"
                     android:textSize="14sp"
-                    android:layout_marginStart="8dp"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_total"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/tv_total"
