--- a/app/src/main/res/layout/activity_adress_book.xml
+++ b/app/src/main/res/layout/activity_adress_book.xml
@@ -41,6 +41,18 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/address_CircularProgressIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="invisible"
+        app:indicatorColor="@color/text_color_2"
+        app:layout_constraintBottom_toTopOf="@+id/card_add_address"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_address_book_activity" />
+
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/card_add_address"
         android:layout_width="match_parent"
