--- a/app/src/main/res/layout/order_item_in_bill_layout.xml
+++ b/app/src/main/res/layout/order_item_in_bill_layout.xml
@@ -25,17 +25,22 @@
             android:background="@drawable/profile_button_custom_bg"
             android:orientation="horizontal">
 
-            <ImageView
-                android:id="@+id/iv_order_in_bill"
-                android:layout_width="0dp"
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/img_card"
+                android:layout_width="54dp"
                 android:layout_height="54dp"
-                android:src="@drawable/image_logo"
-                android:scaleType="centerCrop"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_weight="1.5">
-            </ImageView>
+                app:cardCornerRadius="9dp">
+                <ImageView
+                    android:id="@+id/item_img"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@drawable/image_logo"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </com.google.android.material.card.MaterialCardView>
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
