--- a/app/src/main/res/drawable/ic_arrow_left.xml
+++ b/app/src/main/res/drawable/ic_arrow_left.xml
@@ -1,20 +1,20 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
+    android:width="33dp"
+    android:height="33dp"
+    android:viewportWidth="33"
+    android:viewportHeight="33">
   <path
-      android:pathData="M19,12L5,12"
-      android:strokeLineJoin="round"
       android:strokeWidth="1"
+      android:pathData="M25.8267,16.9279H7.16"
+      android:strokeLineJoin="round"
       android:fillColor="#00000000"
-      android:strokeColor="@color/black"
+      android:strokeColor="#ffffff"
       android:strokeLineCap="round"/>
   <path
-      android:pathData="M12,19l-7,-7l7,-7"
-      android:strokeLineJoin="round"
       android:strokeWidth="1"
+      android:pathData="M16.4934,26.2612L7.16,16.9279L16.4934,7.5945"
+      android:strokeLineJoin="round"
       android:fillColor="#00000000"
-      android:strokeColor="@color/black"
+      android:strokeColor="#ffffff"
       android:strokeLineCap="round"/>
 </vector>
