--- a/app/src/main/res/layout/item_rv_categories_products.xml
+++ b/app/src/main/res/layout/item_rv_categories_products.xml
@@ -33,9 +33,10 @@
                 android:id="@+id/tv_categories_products"
                 android:layout_marginTop="5dp"
                 android:layout_centerHorizontal="true"
-                android:layout_width="wrap_content"
+                android:layout_width="48dp"
                 android:layout_height="wrap_content"
                 android:textSize="13sp"
+                android:gravity="center"
                 android:textAlignment="center"
                 android:text="Milk shake"
                 android:fontFamily="@font/raleway_variable_font_wght"
