--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -80,6 +80,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_shape"
                 android:backgroundTint="#4B413A"
+                android:visibility="gone"
                 style="@style/CardView"
                 android:layout_marginBottom="15dp"
                 app:cardCornerRadius="9dp">
@@ -117,7 +118,8 @@
                 android:backgroundTint="#4B413A"
                 style="@style/CardView"
                 android:layout_marginBottom="15dp"
-                app:cardCornerRadius="9dp">
+                app:cardCornerRadius="9dp"
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -143,13 +145,15 @@
 
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
+                android:id="@+id/cv_juice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_shape"
                 android:backgroundTint="#4B413A"
                 style="@style/CardView"
                 android:layout_marginBottom="15dp"
-                app:cardCornerRadius="9dp">
+                app:cardCornerRadius="9dp"
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -176,13 +180,15 @@
 
             </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
+                android:id="@+id/cv_milk_tea"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/rounded_shape"
                 android:backgroundTint="#4B413A"
                 style="@style/CardView"
                 android:layout_marginBottom="15dp"
-                app:cardCornerRadius="9dp">
+                app:cardCornerRadius="9dp"
+                android:visibility="gone">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -220,7 +226,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -236,18 +242,18 @@
                 android:text="Total: " />
 
             <TextView
+                style="@style/RegularNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/RegularNumber"
                 android:layout_gravity="center_vertical"
-                android:text="990.000"/>
+                android:text="990.000" />
 
             <TextView
+                style="@style/RegularText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/RegularText"
                 android:layout_gravity="center_vertical"
-                android:text=" VND"/>
+                android:text=" VND" />
 
         </LinearLayout>
 
