--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -8,6 +8,16 @@
     tools:context=".ui.fragments.cart.CartFragment"
     android:background="@color/grey_primary">
 
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:indeterminate="true"
+        android:id="@+id/progress_cart"
+        app:indicatorColor="@color/grey_primary_variant"/>
+
     <LinearLayout
         android:id="@+id/header1"
         android:orientation="horizontal"
@@ -41,7 +51,7 @@
         android:layout_below="@id/header1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <CheckBox
             android:layout_width="wrap_content"
@@ -270,7 +280,7 @@
 
     <LinearLayout
         android:id="@+id/empty_cart_view"
-        android:layout_above="@id/suggest_container"
+        android:layout_above="@id/suggestion_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
@@ -302,7 +312,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/suggest_container"
+        android:id="@+id/suggestion_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -323,7 +333,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/item_cart_suggestion" />
+            tools:listitem="@layout/item_cart_suggestion"/>
 
     </LinearLayout>
 
