--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -96,7 +96,7 @@
                 android:id="@+id/tv_amount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                style="@style/SmallText"
+                style="@style/SmallNumber"
                 android:text="1"
                 android:layout_marginHorizontal="6dp"/>
 
